// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchInput should grey out icon when disabled 1`] = `
.circuit-5 {
  font-size: 13px;
  line-height: 20px;
  display: block;
}

.circuit-0 {
  position: absolute;
  top: 1px;
  left: 1px;
  pointer-events: none;
  color: #5C656F;
  padding: 12px;
  height: 40px;
  width: 40px;
}

.circuit-1 {
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #D8DDE1;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  padding: 8px 12px;
  -webkit-transition: border-color 120ms ease-in-out;
  transition: border-color 120ms ease-in-out;
  width: 100%;
  font-size: 16px;
  line-height: 24px;
  margin: 0;
  padding-left: calc( 12px + 16px + 12px );
  padding-right: calc( 12px + 16px + 12px );
}

.circuit-1:focus,
.circuit-1:active {
  border: 1px solid #3388FF;
  outline: none;
}

.circuit-1::-webkit-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1::-moz-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1:-ms-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1::placeholder {
  color: #9DA7B1;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-3 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

label > .circuit-3,
label + .circuit-3 {
  margin-top: 4px;
}

<label
  class="circuit-5"
  for="input_2"
>
  <div
    class="circuit-3 circuit-4"
    disabled=""
  >
    <svg
      class="circuit-0"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M2 7a5 5 0 1110 0A5 5 0 012 7zm5-7a7 7 0 104.192 12.606l3.1 3.101a1 1 0 001.415-1.414l-3.1-3.1A7 7 0 007 0z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
    <input
      aria-invalid="false"
      class="circuit-1 circuit-2"
      disabled=""
      id="input_2"
      type="text"
      value=""
    />
  </div>
</label>
`;

exports[`SearchInput should render with default styles 1`] = `
.circuit-5 {
  font-size: 13px;
  line-height: 20px;
  display: block;
}

.circuit-3 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
}

label > .circuit-3,
label + .circuit-3 {
  margin-top: 4px;
}

.circuit-0 {
  position: absolute;
  top: 1px;
  left: 1px;
  pointer-events: none;
  color: #5C656F;
  padding: 12px;
  height: 40px;
  width: 40px;
}

.circuit-1 {
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #D8DDE1;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  padding: 8px 12px;
  -webkit-transition: border-color 120ms ease-in-out;
  transition: border-color 120ms ease-in-out;
  width: 100%;
  font-size: 16px;
  line-height: 24px;
  margin: 0;
  padding-left: calc( 12px + 16px + 12px );
  padding-right: calc( 12px + 16px + 12px );
}

.circuit-1:focus,
.circuit-1:active {
  border: 1px solid #3388FF;
  outline: none;
}

.circuit-1::-webkit-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1::-moz-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1:-ms-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

.circuit-1::placeholder {
  color: #9DA7B1;
  -webkit-transition: color 120ms ease-in-out;
  transition: color 120ms ease-in-out;
}

<label
  class="circuit-5"
  for="input_1"
>
  <div
    class="circuit-3 circuit-4"
  >
    <svg
      class="circuit-0"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M2 7a5 5 0 1110 0A5 5 0 012 7zm5-7a7 7 0 104.192 12.606l3.1 3.101a1 1 0 001.415-1.414l-3.1-3.1A7 7 0 007 0z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
    <input
      aria-invalid="false"
      class="circuit-1 circuit-2"
      id="input_1"
      type="text"
      value=""
    />
  </div>
</label>
`;
